port the TextEditorWidget to C++

--- a/meson.build
+++ b/meson.build
@@ -3,11 +3,10 @@ project('atom-gtk', 'vala', 'c', 'cpp')
 executable(
   meson.project_name(),
   'src/one-dark.cc',
-  'src/atom-glib.cc',
-  'src/atom-glib.vapi',
   'src/application.vala',
   'src/window.vala',
-  'src/text-editor-widget.vala',
+  'src/atom.vapi',
+  'src/text-editor-widget.cc',
   import('gnome').compile_resources('data', 'data/gresource.xml', source_dir: 'data'),
   include_directories: include_directories(
     'src'
