more custom widgets

--- a/meson.build
+++ b/meson.build
@@ -4,6 +4,9 @@ executable(
   meson.project_name(),
   'src/application.vala',
   'src/window.vala',
+  'src/notebook.vala',
+  'src/tab-label.vala',
+  'src/text-editor-container.vala',
   'src/atom.vapi',
   'src/text-editor-widget.cc',
   import('gnome').compile_resources(
