--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-      - run: sudo apt-get update && sudo apt-get install meson valac sassc libgtk-3-dev
+      - run: sudo apt-get update && sudo apt-get install meson valac sassc libgtk-3-dev libpcre2-dev
       - run: meson setup build
       - run: ninja -C build
